--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,19 @@
 beautifulsoup4==4.12.0
 certifi==2022.12.7
 charset-normalizer==3.1.0
+click==8.1.3
+colorama==0.4.6
 idna==3.4
+libretranslatepy==2.1.1
+lxml==4.9.2
+numpy==1.24.3
+pandas==2.0.1
+python-dateutil==2.8.2
+pytz==2023.3
 requests==2.28.2
+six==1.16.0
 soupsieve==2.4
+translate==3.6.1
+translator==0.0.9
+tzdata==2023.3
 urllib3==1.26.15
