--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,19 @@ certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
+contourpy==1.0.7
+cycler==0.11.0
+fonttools==4.39.3
 idna==3.4
+kiwisolver==1.4.4
 libretranslatepy==2.1.1
 lxml==4.9.2
+matplotlib==3.7.1
 numpy==1.24.3
+packaging==23.1
 pandas==2.0.1
+Pillow==9.5.0
+pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2023.3
 requests==2.28.2
